@@ -9,7 +9,9 @@ Here are some steps for making a new release of pygame.  So everyone knows what 
 *  check with people on different platforms that tests are working.  
 *  ask platform people to sign off for their platform building, and testing ok.  
 *  WHATSNEW document is updated, with any changes.
-*  declare tar ball set, by making a branch in cvs with the pygame version as rc1.  eg 1.7.1rc1
+*  declare tar ball set, by making a branch in svn with the pygame version as rc1.  eg 1.7.1rc1
+   - files to change version string: lib/version.py setup.py readme.html readme.txt
+   - This is the subversion command used:  svn copy svn://seul.org/svn/pygame/trunk svn://seul.org/svn/pygame/tags/release_1_8_0rc1 -m "new 1.8.0rc1 release."
 *  second round of testing goes on the new release branch.  If any changes need to be made, all platforms need to be tested again and signed off.  The pygame rc version is incremented and a new rc tar ball is released.  eg 1.7.1rc2.
 *  if no changes needed to be made to the rc release, then the version is changed.  eg from 1.7.1rc1 to 1.7.1release
 *  release person uploads final sources tarball to website.
@@ -29,7 +31,7 @@ testing pygame := at least all the examples run ok.  Also test major pygames, so
 
 rc releases := these are release candidates.  If no changes need to be made, then the pygame version is changed and it can be released.
 
-pre releases := these are snap shots from cvs.
+pre releases := these are snap shots from svn.
 
 
 
