@@ -111,7 +111,7 @@
   <tr><td><a href="cdrom.html#CD.get_busy">CD.get_busy</a> - <font size=-1>true if the drive is playing audio</font></td><td>true if the drive is playing audio</td></tr>
   <tr><td><a href="cdrom.html#CD.get_paused">CD.get_paused</a> - <font size=-1>true if the drive is paused</font></td><td>true if the drive is paused</td></tr>
   <tr><td><a href="cdrom.html#CD.get_current">CD.get_current</a> - <font size=-1>the current audio playback position</font></td><td>the current audio playback position</td></tr>
-  <tr><td><a href="cdrom.html#CD.get_empty">CD.get_empty</a> - <font size=-1>true if a cdrom is in the drive</font></td><td>true if a cdrom is in the drive</td></tr>
+  <tr><td><a href="cdrom.html#CD.get_empty">CD.get_empty</a> - <font size=-1>False if a cdrom is in the drive</font></td><td>False if a cdrom is in the drive</td></tr>
   <tr><td><a href="cdrom.html#CD.get_numtracks">CD.get_numtracks</a> - <font size=-1>the number of tracks on the cdrom</font></td><td>the number of tracks on the cdrom</td></tr>
   <tr><td><a href="cdrom.html#CD.get_track_audio">CD.get_track_audio</a> - <font size=-1>true if the cdrom track has audio data</font></td><td>true if the cdrom track has audio data</td></tr>
   <tr><td><a href="cdrom.html#CD.get_all">CD.get_all</a> - <font size=-1>get all track information</font></td><td>get all track information</td></tr>
@@ -159,7 +159,7 @@
 <p>Playback audio from an audio cdrom in the drive. Besides the track number argument, you can also pass a starting and ending time for playback. The start and end time are in seconds, and can limit the section of an audio track played. </p>
 <p>If you pass a start time but no end, the audio will play to the end of the track. If you pass a start time and 'None' for the end time, the audio will play to the end of the entire disc. </p>
 <p>See the <tt><a href="cdrom.html#CD.get_numtracks">CD.get_numtracks</a> - <font size=-1>the number of tracks on the cdrom</font></tt> and <tt><a href="cdrom.html#CD.get_track_audio">CD.get_track_audio</a> - <font size=-1>true if the cdrom track has audio data</font></tt> to find tracks to playback. </p>
-<p>Note, track 0 is track 1 on the <tt>CD</tt>. Track numbers start at zero. </p>
+<p>Note, track 0 is the first track on the <tt>CD</tt>. Track numbers start at zero. </p>
 <!--COMMENTS:CD.play--> &nbsp;<br> 
 <br></ul>
 
@@ -178,7 +178,7 @@
   <i>temporarily stop audio playback</i><br>
   <tt>CD.pause(): return None</tt><br>
 <p>Temporarily stop audio playback on the <tt>CD</tt>. The playback can be resumed at the same point with the <tt><a href="cdrom.html#CD.resume">CD.resume</a> - <font size=-1>unpause audio playback</font></tt> method. If the <tt>CD</tt> is not playing this method does nothing. </p>
-<p>Note, track 0 is track 1 on the <tt>CD</tt>. Track numbers start at zero. </p>
+<p>Note, track 0 is the first track on the <tt>CD</tt>. Track numbers start at zero. </p>
 <!--COMMENTS:CD.pause--> &nbsp;<br> 
 <br></ul>
 
@@ -242,16 +242,16 @@
   <i>the current audio playback position</i><br>
   <tt>CD.get_current(): return track, seconds</tt><br>
 <p>Returns both the current track and time of that track. This method works when the drive is either playing or paused. </p>
-<p>Note, track 0 is track 1 on the <tt>CD</tt>. Track numbers start at zero. </p>
+<p>Note, track 0 is the first track on the <tt>CD</tt>. Track numbers start at zero. </p>
 <!--COMMENTS:CD.get_current--> &nbsp;<br> 
 <br></ul>
 
 
 <a name="CD.get_empty">
 <big><b>CD.get_empty</big></b><br><ul>
-  <i>true if a cdrom is in the drive</i><br>
+  <i>False if a cdrom is in the drive</i><br>
   <tt>CD.get_empty(): return True</tt><br>
-<p>Return true if there is a cdrom currently in the drive. If the drive is open this will also be False. </p>
+<p>Return False if there is a cdrom currently in the drive. If the drive is open this will return True. </p>
 <!--COMMENTS:CD.get_empty--> &nbsp;<br> 
 <br></ul>
 
@@ -270,7 +270,7 @@
   <i>true if the cdrom track has audio data</i><br>
   <tt>CD.get_track_audio(track): return bool</tt><br>
 <p>Determine if a track on a cdrom contains audio data. You can also call <tt>CD.num_tracks()</tt> and <tt><a href="cdrom.html#CD.get_all">CD.get_all</a> - <font size=-1>get all track information</font></tt> to determine more information about the cdrom. </p>
-<p>Note, track 0 is track 1 on the <tt>CD</tt>. Track numbers start at zero. </p>
+<p>Note, track 0 is the first track on the <tt>CD</tt>. Track numbers start at zero. </p>
 <!--COMMENTS:CD.get_track_audio--> &nbsp;<br> 
 <br></ul>
 
@@ -289,7 +289,7 @@
   <i>start time of a cdrom track</i><br>
   <tt>CD.get_track_start(track): return seconds</tt><br>
 <p>Return the absolute time in seconds where at start of the cdrom track. </p>
-<p>Note, track 0 is track 1 on the <tt>CD</tt>. Track numbers start at zero. </p>
+<p>Note, track 0 is the first track on the <tt>CD</tt>. Track numbers start at zero. </p>
 <!--COMMENTS:CD.get_track_start--> &nbsp;<br> 
 <br></ul>
 
@@ -299,7 +299,7 @@
   <i>length of a cdrom track</i><br>
   <tt>CD.get_track_length(track): return seconds</tt><br>
 <p>Return a floating point value in seconds of the length of the cdrom track. </p>
-<p>Note, track 0 is track 1 on the <tt>CD</tt>. Track numbers start at zero. </p>
+<p>Note, track 0 is the first track on the <tt>CD</tt>. Track numbers start at zero. </p>
 <!--COMMENTS:CD.get_track_length--> &nbsp;<br> 
 <br></ul>
 <br></ul>
