@@ -55,7 +55,7 @@
 <li><a href="cdrom.html#CD.get_all">CD.get_all</a> - <font size=-1>get all track information</font></li>
 <li><a href="cdrom.html#CD.get_busy">CD.get_busy</a> - <font size=-1>true if the drive is playing audio</font></li>
 <li><a href="cdrom.html#CD.get_current">CD.get_current</a> - <font size=-1>the current audio playback position</font></li>
-<li><a href="cdrom.html#CD.get_empty">CD.get_empty</a> - <font size=-1>true if a cdrom is in the drive</font></li>
+<li><a href="cdrom.html#CD.get_empty">CD.get_empty</a> - <font size=-1>False if a cdrom is in the drive</font></li>
 <li><a href="cdrom.html#CD.get_id">CD.get_id</a> - <font size=-1>the index of the cdrom drive</font></li>
 <li><a href="cdrom.html#CD.get_init">CD.get_init</a> - <font size=-1>true if this cd device initialized</font></li>
 <li><a href="cdrom.html#CD.get_name">CD.get_name</a> - <font size=-1>the system name of the cdrom drive</font></li>
